--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 # oTree-may-overwrite-this-file
 # IF YOU MODIFY THIS FILE, remove this comment.
 # otherwise, oTree will automatically overwrite it.
-otree>=5.0.0a21
+otree==5.10.3
 psycopg2>=2.8.4
+pandas==1.5.3
+openpyxl==3.1.2
+numpy==1.24.2
